--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -8,6 +8,6 @@ body #wall #tag-2 {
 #wall #tag-3.slick.wicked {
   display:none;
 }
-#wall.parent#tag-4 {
-  displaynone;
+#wall .parent #tag-4 {
+  display:none;
 }
