--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,6 +11,6 @@ body #wall #tag-2 {
 #wall .parent #tag-4 {
   display:none;
 }
-#wall .parent #tag-5 .slick {
-  displa:none;
+div#wall div.parent #tag-5 .slick {
+  display:none;
 }
