--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -11,6 +11,6 @@ body #wall #tag-2 {
 #wall .parent #tag-4 {
   display:none;
 }
-div#wall di.parent #tag-5 .slick {
+div#wall .parent #tag-5 .slick {
   display:none;
 }
