--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -14,6 +14,6 @@ body #wall #tag-2 {
 div#wall div.parent #tag-5.slick {
   display:none;
 }
-body #wall div.parent div:last-child div#tag-6{
+body div#wall .parent div:last-child div#tag-6{
   dispaly:none;
 }
